[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/Assets/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/Menu/Menu.gd" type="Script" id=2]
[ext_resource path="res://UI/TitleScreen/2307.png" type="Texture" id=3]
[ext_resource path="res://UI/Fonts/Arial/arialbold_font_big.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/Fonts/Arial/arialbold_fontdata.tres" type="DynamicFontData" id=5]
[ext_resource path="res://UI/Assets/MenuBG.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=2]
size = 72
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="UI"]
visible = false
modulate = Color( 1, 1, 1, 0.443137 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 360.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7

[node name="MenuBase" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )

[node name="NinePatchRect" type="PanelContainer" parent="UI/MenuBase"]
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/panel = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="UI/MenuBase/NinePatchRect"]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MenuBase/NinePatchRect/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0
custom_constants/separation = 100

[node name="Title" type="Label" parent="UI/MenuBase/NinePatchRect/MarginContainer/VBoxContainer"]
margin_right = 1820.0
margin_bottom = 82.0
custom_colors/font_color_shadow = Color( 0, 0.505882, 0.866667, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Sea City Tale"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MenuBase/NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 1820.0
margin_bottom = 632.0
custom_constants/separation = 50
alignment = 1

[node name="SaveBtn" type="Button" parent="UI/MenuBase/NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 760.0
margin_right = 1060.0
margin_bottom = 75.0
rect_min_size = Vector2( 300, 75 )
size_flags_horizontal = 4
size_flags_vertical = 5
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "Save / Load"

[node name="DisplayBtn" type="Button" parent="UI/MenuBase/NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 760.0
margin_top = 125.0
margin_right = 1060.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 75 )
size_flags_horizontal = 4
size_flags_vertical = 5
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "Display Settings"

[node name="GameSettings" type="Button" parent="UI/MenuBase/NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 760.0
margin_top = 250.0
margin_right = 1060.0
margin_bottom = 325.0
rect_min_size = Vector2( 300, 75 )
size_flags_horizontal = 4
size_flags_vertical = 5
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "Game Settings"

[node name="AudioBtn" type="Button" parent="UI/MenuBase/NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 760.0
margin_top = 375.0
margin_right = 1060.0
margin_bottom = 450.0
rect_min_size = Vector2( 300, 75 )
size_flags_horizontal = 4
size_flags_vertical = 5
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "Audio Settings"

[node name="ContinueBtn" type="Button" parent="UI/MenuBase/NinePatchRect/MarginContainer/VBoxContainer"]
margin_left = 810.0
margin_top = 732.0
margin_right = 1010.0
margin_bottom = 782.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
size_flags_vertical = 5
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "Continue"

[node name="Node2D" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="pressed" from="UI/MenuBase/NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/SaveBtn" to="." method="_on_SaveBtn_pressed"]
[connection signal="pressed" from="UI/MenuBase/NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/DisplayBtn" to="." method="_on_DisplayBtn_pressed"]
[connection signal="pressed" from="UI/MenuBase/NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/AudioBtn" to="." method="_on_AudioBtn_pressed"]
[connection signal="pressed" from="UI/MenuBase/NinePatchRect/MarginContainer/VBoxContainer/ContinueBtn" to="." method="_on_ContinueBtn_pressed"]
